fix: overflow: auto로 스크롤바 추가

--- a/index.css
+++ b/index.css
@@ -41,6 +41,7 @@
   flex-direction: column;
   padding: 10px;
   gap: 5px;
+  overflow: auto;
 }
 .todo-box {
   background-color: #c9f6c8;
